--- a/Seconde Project/package.json
+++ b/Seconde Project/package.json
@@ -12,7 +12,8 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-plugin-string": "^1.2.1"
   },
   "dependencies": {
     "three": "^0.155.0"
